--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,4 +1,8 @@
-<h2>Hello World from RB on Heroku</h2>
-<p>
+<div class="center hero-unit">
+<h2>Hello World from RB on Heroku in future</h2>
+<h3>
   The time is now: <%= Time.now %>
-</p>
+</h3>
+
+<%= link_to "Sign up now!", '#', class: "btn btn-large btn-primary" %>
+</div>
