Add sign up page and controller

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -4,5 +4,5 @@
   The time is now: <%= Time.now %>
 </h3>
 
-<%= link_to "Sign up now!", '#', class: "btn btn-large btn-primary" %>
+<%= link_to "Sign up now!", signup_path, class: "btn btn-large btn-primary" %>
 </div>
